--- a/scss/style.css
+++ b/scss/style.css
@@ -1,3 +1,74 @@
-h1 {
-    color: mediumaquamarine;
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
+
+html,
+body {
+  /* overflow: hidden; */
+  width: 100%;
+  height: 100%;
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  overflow-x: hidden;
+}
+
+h1,
+h2,
+h3 {
+  font-weight: 400;
+}
+
+header {
+  background-color: rosybrown;
+  padding: 1rem;
+}
+
+main {
+  display: flex;
+  position: absolute;
+  width: 100%;
+}
+
+.container {
+  background-color: aliceblue;
+}
+
+.section {
+  width: 100%;
+  height: 30rem;
+  padding: 1rem;
+}
+
+.section-1 {
+  background-color: antiquewhite;
+}
+
+.section-2 {
+  background-color: cadetblue;
+}
+
+.loader {
+  position: absolute;
+  top: -100vh;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: blueviolet;
+  z-index: 999;
+}
+
+.scatter-container {
+  margin: auto;
+  width: 800px;
+  height: 600px;
+}
+
+.svg-plot,
+.canvas-plot {
+  position: absolute;
+}
+
+.canvas2 {
+  border: 1px solid red;
 }
